@startuml Class Diagram

enum TaskStatus {
  TODO
  IN_PROGRESS
  COMPLETED
}

enum Priority {
  LOW
  MEDIUM
  HIGH
}

class Task {
  + id: Integer
  + title: String
  + description: String
  + status: TaskStatus
  + priority: Priority
  + created_at: DateTime
  + updated_at: DateTime
}

class TaskCreate {
  + title: String
  + description: String
  + status: TaskStatus
  + priority: Priority
}

class TaskUpdate {
  + title: String
  + description: String
  + status: TaskStatus
  + priority: Priority
}

class TaskInDB {
  + id: Integer
  + title: String
  + description: String
  + status: TaskStatus
  + priority: Priority
  + created_at: DateTime
  + updated_at: DateTime
}

TaskStatus <-- Task
Priority <-- Task
Task <|-- TaskInDB
TaskCreate --> Task : creates
TaskUpdate --> Task : updates

@enduml
